AccountManager - SDK: Implemented call to SDK to delete userSurrogateIdLinks on Account Deletion (SLR, CR at SDK DB are preserved)